# category-theory-programmers

./: LICENSE  README.md
doc/: 00_header.md  01_introduction.md  02_categories.md  03_category_of_types.md  04_products.md  05_yoneda.md  06_ccc.md  07_adjunctions.md  08_monads.md  09_f_algebras.md  10_comonads.md  10_ideas.md  11_lenses.md  A0_ideas.md  A1_exercises.md  A2_haskell.md  Makefile  categories_for_programmers.epub  categories_for_programmers.md  mendeley.bib  slides_week1.md  slides_week2.md  slides_week4.md  slides_week7.md  template.texinfo
examples/catamorphisms/: ALaCarte.hs  Expressions.hs  Fix.hs  List.hs
examples/categories/: Adjunction.hs  Fix.hs
examples/folds/: folds.hs
examples/gameoflife/: LICENSE  README.md  gameoflife.cabal  stack.yaml
examples/gameoflife/src/: GameOfLife.hs  Main.hs
examples/haskell/: functors.hs  monads.hs
examples/lens/: README.md  lens.cabal  stack.yaml
examples/lens/src/: Main.hs
examples/logger/: logger.hs
examples/parser/: lisp_like_dsl.hs
