name:                lens
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jwbuurlage/lens#readme
license:             BSD3
license-file:        LICENSE
author:              Jan-Willem Buurlage
maintainer:          janwillembuurlage@gmail.com
copyright:           2017 Jan-Willem Buurlage
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lens
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -freverse-errors
